--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "cordova-android": "^8.1.0",
+    "cordova-ios": "5.1.1",
     "ngx-socket-io": "^3.2.0",
     "rxjs": "~6.5.1",
     "rxjs-compat": "^6.6.0",
@@ -73,7 +74,8 @@
       "cordova-plugin-ionic-keyboard": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
